@@ -5,6 +5,7 @@ use Carp 'croak';
 use Fcntl ':flock';
 use Mojo::Util 'encode';
 
+has format => sub { \&_format };
 has handle => sub {
 
   # File
@@ -25,15 +26,18 @@ has 'path';
 # Supported log level
 my $LEVEL = {debug => 1, info => 2, warn => 3, error => 4, fatal => 5};
 
+sub append {
+  my ($self, $msg) = @_;
+
+  return unless my $handle = $self->handle;
+  flock $handle, LOCK_EX;
+  $handle->print(encode('UTF-8', $msg)) or croak "Can't write to log: $!";
+  flock $handle, LOCK_UN;
+}
+
 sub debug { shift->log(debug => @_) }
 sub error { shift->log(error => @_) }
 sub fatal { shift->log(fatal => @_) }
-
-sub format {
-  my ($self, $level, @lines) = @_;
-  return encode 'UTF-8',
-    '[' . localtime(time) . "] [$level] " . join("\n", @lines, '');
-}
 
 sub info { shift->log(info => @_) }
 
@@ -59,19 +63,21 @@ sub new {
 
 sub warn { shift->log(warn => @_) }
 
+sub _format {
+  '[' . localtime(shift) . '] [' . shift . '] ' . join("\n", @_, '');
+}
+
 sub _message {
   my ($self, $level) = (shift, shift);
 
-  return unless $self->is_level($level) && (my $handle = $self->handle);
+  return unless $self->is_level($level);
 
   my $max     = $self->max_history_size;
   my $history = $self->history;
-  push @$history, [time, $level, @_];
+  push @$history, my $msg = [time, $level, @_];
   shift @$history while @$history > $max;
 
-  flock $handle, LOCK_EX;
-  $handle->print($self->format($level, @_)) or croak "Can't write to log: $!";
-  flock $handle, LOCK_UN;
+  $self->append($self->format->(@$msg));
 }
 
 1;
@@ -127,6 +133,18 @@ Emitted when a new message gets logged.
 
 L<Mojo::Log> implements the following attributes.
 
+=head2 format
+
+  my $cb = $log->format;
+  $log   = $log->format(sub {...});
+
+A callback for formatting log messages.
+
+  $log->format(sub {
+    my ($time, $level, @lines) = @_;
+    ...
+  });
+
 =head2 handle
 
   my $handle = $log->handle;
@@ -171,6 +189,12 @@ Log file path used by L</"handle">.
 L<Mojo::Log> inherits all methods from L<Mojo::EventEmitter> and implements
 the following new ones.
 
+=head2 append
+
+  $log->append($msg);
+
+Append message to L</"handle">.
+
 =head2 debug
 
   $log = $log->debug('You screwed up, but that is ok.');
@@ -191,13 +215,6 @@ Log error message.
   $log = $log->fatal('Bye', 'bye!');
 
 Log fatal message.
-
-=head2 format
-
-  my $msg = $log->format(debug => 'Hi there!');
-  my $msg = $log->format(debug => 'Hi', 'there!');
-
-Format log message.
 
 =head2 info
 
