@@ -3,9 +3,14 @@
   - Code name "Tiger Face", this is a major release.
   - Changed heuristics for number detection in Mojo::JSON to better line up
     with user expectations.
+  - Changed lock and unlock callbacks in Mojo::IOLoop to not receive an
+    invocant.
   - Removed deprecated support for "X-Forwarded-HTTPS".
   - Removed generate_port method from Mojo::IOLoop.
+  - Removed format method from Mojo::Log.
+  - Added format attribute to Mojo::Log.
   - Added no_compression method to Mojo::Transaction::WebSocket.
+  - Added append method to Mojo::Log.
   - Fixed Mojo::IOLoop::Server to work correctly with newer versions of
     IO::Socket::SSL. (noxxi)
   - Fixed warnings in Mojo::IOLoop::Delay.
